FACES-1714 remove longDescription from the showcase

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/general/accordion.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/general/accordion.xhtml
@@ -10,7 +10,7 @@
 				margin-right: 4px;
 			}
 		</h:outputStylesheet>
-		<showcase:example description="#{i18n['alloy-accordion-general-example-1']}" longDescription="true" number="1">
+		<showcase:example description="#{i18n['alloy-accordion-general-example-1']}" number="1">
 			<alloy:accordion styleClass="accordion-example-1">
 				<alloy:tab>
 					<f:facet name="header">
@@ -82,7 +82,7 @@
 				padding-right: 6px;
 			}
 		</h:outputStylesheet>
-		<showcase:example description="#{i18n['alloy-accordion-general-example-2']}" longDescription="true" number="2">
+		<showcase:example description="#{i18n['alloy-accordion-general-example-2']}" number="2">
 			<alloy:accordion styleClass="accordion-example-2">
 				<alloy:tab contentClass="content-compatible" headerClass="header-compatible" label="Compatible">
 					<alloy:image library="images" name="icon-compatible.png" />
