--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputhidden/immediate/inputHidden.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputhidden/immediate/inputHidden.xhtml
@@ -7,7 +7,7 @@
 		<!-- Example 1: ValueChangeListener execution when immediate is true -->
 		<h:form>
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-true']}"
-				longDescription="true" number="1">
+				number="1">
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<div class="showcase-container">
 					<alloy:outputText value="#{i18n['this-is-a-div-that-contains-a-hidden-input']}" />
@@ -31,7 +31,7 @@
 		<!-- Example 2: ValueChangeListener execution when immediate is false (the default) -->
 		<h:form>
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-false']}"
-				longDescription="true" number="2">
+				number="2">
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<div class="showcase-container">
 					<alloy:outputText value="#{i18n['this-is-a-div-that-contains-a-hidden-input']}" />
