--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputsecret/immediate/inputSecret.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputsecret/immediate/inputSecret.xhtml
@@ -7,7 +7,7 @@
 		<!-- Example 1: ValueChangeListener execution when immediate is true -->
 		<h:form id="myForm1">
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-true']}"
-				longDescription="true" number="1">
+				number="1">
 				<alloy:messages id="messagesId" globalOnly="true" styleClass="feedback" />
 				<alloy:field label="#{i18n['password']}">
 					<alloy:inputSecret id="text" immediate="true" value="#{inputSecretModelBean.password}"
@@ -28,7 +28,7 @@
 		<!-- Example 2: ValueChangeListener execution when immediate is false (the default) -->
 		<h:form id="myForm2">
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-false']}"
-				longDescription="true" number="2">
+				number="2">
 				<alloy:messages id="messagesId" globalOnly="true" styleClass="feedback" />
 				<alloy:field label="#{i18n['password']}">
 					<alloy:inputSecret id="text" value="#{inputSecretModelBean.password}"
