--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectbooleancheckbox/immediate/selectBooleanCheckbox.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectbooleancheckbox/immediate/selectBooleanCheckbox.xhtml
@@ -7,7 +7,7 @@
 		<!-- Example 1: ValueChangeListener execution when immediate is true -->
 		<h:form>
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-true']}"
-				longDescription="true" number="1">
+				number="1">
 				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['agree']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:selectBooleanCheckbox immediate="true" value="#{selectBooleanCheckboxModelBean.agree}"
@@ -28,7 +28,7 @@
 		<!-- Example 2: ValueChangeListener execution when immediate is false (the default) -->
 		<h:form>
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-false']}"
-				longDescription="true" number="2">
+				number="2">
 				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['agree']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:selectBooleanCheckbox value="#{selectBooleanCheckboxModelBean.agree}"
