--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandlink/immediate/commandLink.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/commandlink/immediate/commandLink.xhtml
@@ -6,7 +6,7 @@
 	<ui:define name="col1">
 		<!-- Example 1: ActionListener execution when immediate is true -->
 		<h:form>
-			<showcase:example description="#{i18n['actionlistener-execution-when-immediate-is-true']}" longDescription="true" number="1">
+			<showcase:example description="#{i18n['actionlistener-execution-when-immediate-is-true']}" number="1">
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:commandLink actionListener="#{commandBackingBean.actionListener}" immediate="true"
 					value="#{i18n['submit']}">
@@ -19,7 +19,7 @@
 	<ui:define name="col2">
 		<!-- Example 2: ActionListener execution when immediate is false (the default) -->
 		<h:form>
-			<showcase:example description="#{i18n['actionlistener-execution-when-immediate-is-false']}" longDescription="true" number="2">
+			<showcase:example description="#{i18n['actionlistener-execution-when-immediate-is-false']}" number="2">
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:commandLink actionListener="#{commandBackingBean.actionListener}" value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
