--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputsecret/redisplay/inputSecret.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputsecret/redisplay/inputSecret.xhtml
@@ -6,7 +6,7 @@
 	<ui:define name="col1">
 		<!-- Example 1: Specifying redisplay=false (the default, which is secure) -->
 		<h:form id="myForm1">
-			<showcase:example description="#{i18n['alloy-inputsecret-redisplay-example-1']}" longDescription="true" number="1">
+			<showcase:example description="#{i18n['alloy-inputsecret-redisplay-example-1']}" number="1">
 				<alloy:messages id="globalMessages" globalOnly="true" layout="table" />
 				<alloy:field label="#{i18n['password']}">
 					<alloy:inputSecret id="secret1" value="#{inputSecretModelBean.password}" />
@@ -26,7 +26,7 @@
 	<ui:define name="col2">
 		<!-- Example 2: Specifying redisplay=true (potential security risk) -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-inputsecret-redisplay-example-2']}" longDescription="true" number="2">
+			<showcase:example description="#{i18n['alloy-inputsecret-redisplay-example-2']}" number="2">
 				<alloy:messages globalOnly="true" layout="table" />
 				<alloy:field label="#{i18n['password']}">
 					<alloy:inputSecret id="secret2" redisplay="true" value="#{inputSecretModelBean.password}" />
