--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtext/immediate/inputText.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtext/immediate/inputText.xhtml
@@ -7,7 +7,7 @@
 		<!-- Example 1: ValueChangeListener execution when immediate is true -->
 		<h:form>
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-true']}"
-				longDescription="true" number="1">
+				number="1">
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:inputText id="text" immediate="true" value="#{inputTextModelBean.text}"
 					valueChangeListener="#{inputTextBackingBean.valueChangeListener}" />
@@ -26,7 +26,7 @@
 		<!-- Example 2: ValueChangeListener execution when immediate is false (the default) -->
 		<h:form>
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-false']}"
-				longDescription="true" number="2">
+				number="2">
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:inputText id="text" value="#{inputTextModelBean.text}"
 					valueChangeListener="#{inputTextBackingBean.valueChangeListener}" />
