--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputremainingchars/general/outputRemainingChars.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputremainingchars/general/outputRemainingChars.xhtml
@@ -6,7 +6,7 @@
 	<ui:define name="col1">
 		<!-- Example 1: Associate with an alloy:inputText and specify a {0} token within the value attribute. -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-outputremainingchars-general-example-1']}" longDescription="true"
+			<showcase:example description="#{i18n['alloy-outputremainingchars-general-example-1']}"
 				number="1" renderedCheckbox="true">
 				<alloy:inputText id="inputText" maxlength="10" value="#{outputRemainingCharsModelBean.text}" />
 				<br />
@@ -26,7 +26,7 @@
 	<ui:define name="col2">
 		<!-- Example 2: Associate with an alloy:inputTextarea and simply render the number of remaining characters. -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-outputremainingchars-general-example-2']}" longDescription="true"
+			<showcase:example description="#{i18n['alloy-outputremainingchars-general-example-2']}"
 				number="2" renderedCheckbox="true">
 				<alloy:inputTextarea id="inputTextarea" maxlength="20" value="#{outputRemainingCharsModelBean.text}" />
 				<br />
