--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputremainingchars/max-length-events/outputRemainingChars.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputremainingchars/max-length-events/outputRemainingChars.xhtml
@@ -6,7 +6,7 @@
 	<ui:define name="col1">
 		<!-- Example 1: The onMaxlengthReached event occurs every time maxlength is reached. -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-outputremainingchars-max-length-reached-1']}" longDescription="true"
+			<showcase:example description="#{i18n['alloy-outputremainingchars-max-length-reached-1']}"
 				number="1">
 				<alloy:inputTextarea id="inputTextarea" maxlength="10" />
 				<br />
@@ -19,7 +19,7 @@
 	<ui:define name="col2">
 		<!-- Example 2: The onceMaxlengthReached event occurs the first time maxlength is reached. -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-outputremainingchars-max-length-reached-2']}" longDescription="true"
+			<showcase:example description="#{i18n['alloy-outputremainingchars-max-length-reached-2']}"
 				number="2">
 				<alloy:inputTextarea id="inputTextarea" maxlength="10" />
 				<br />
