--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/popover/general/popover.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/popover/general/popover.xhtml
@@ -6,7 +6,7 @@
 	<ui:define name="col1">
 		<!-- Example 1: Default usage with dismissible="true" -->
 		<h:form id="myForm1">
-			<showcase:example description="#{i18n['alloy-popover-general-example-1']}" longDescription="true" number="1">
+			<showcase:example description="#{i18n['alloy-popover-general-example-1']}" number="1">
 				<alloy:button id="myButton1" onclick="Liferay.component('popover1').toggle();"
 					value="#{i18n['click-here-to-toggle-the-popover-and-click-outside-the-popover-to-hide']}" />
 				<alloy:popover clientKey="popover1" for="myButton1" headerText="#{i18n['header-text']}">
@@ -29,7 +29,7 @@
 	<ui:define name="col2">
 		<!-- Example 2: Alternate usage with dismissible="false" -->
 		<h:form id="myForm2">
-			<showcase:example description="#{i18n['alloy-popover-general-example-2']}" longDescription="true" number="2">
+			<showcase:example description="#{i18n['alloy-popover-general-example-2']}" number="2">
 				<alloy:button id="myButton2" onclick="Liferay.component('popover2').show();"
 					value="#{i18n['click-here-to-show-the-popover']}" />
 				<alloy:popover autoShow="false" clientKey="popover2" dismissible="false" for="myButton2"
