--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/immediate/selectManyMenu.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/immediate/selectManyMenu.xhtml
@@ -7,7 +7,7 @@
 		<!-- Example 1: ValueChangeListener execution when immediate is true -->
 		<h:form>
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-true']}"
-				longDescription="true" number="1">
+				number="1">
 				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:selectManyMenu immediate="true" value="#{selectManyModelBean.favoriteIds}"
@@ -36,7 +36,7 @@
 		<!-- Example 2: ValueChangeListener execution when immediate is false (the default) -->
 		<h:form>
 			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-false']}"
-				longDescription="true" number="2">
+				number="2">
 				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:selectManyMenu value="#{selectManyModelBean.favoriteIds}"
