--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputsecret/immediate/inputSecret.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputsecret/immediate/inputSecret.xhtml
@@ -6,8 +6,7 @@
 	<ui:define name="col1">
 		<!-- Example 1: ValueChangeListener execution when immediate is true -->
 		<h:form id="myForm1">
-			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-true']}"
-				longDescription="true" number="1">
+			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-true']}" number="1">
 				<alloy:messages id="messagesId" globalOnly="true" styleClass="feedback" />
 				<alloy:field label="#{i18n['password']}">
 					<alloy:inputSecret id="text" immediate="true" value="#{inputSecretModelBean.password}"
@@ -27,8 +26,7 @@
 	<ui:define name="col2">
 		<!-- Example 2: ValueChangeListener execution when immediate is false (the default) -->
 		<h:form id="myForm2">
-			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-false']}"
-				longDescription="true" number="2">
+			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-false']}" number="2">
 				<alloy:messages id="messagesId" globalOnly="true" styleClass="feedback" />
 				<alloy:field label="#{i18n['password']}">
 					<alloy:inputSecret id="text" value="#{inputSecretModelBean.password}"
