--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanycheckbox/immediate/selectManyCheckbox.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanycheckbox/immediate/selectManyCheckbox.xhtml
@@ -6,8 +6,7 @@
 	<ui:define name="col1">
 		<!-- Example 1: ValueChangeListener execution when immediate is true -->
 		<h:form>
-			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-true']}"
-				longDescription="true" number="1">
+			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-true']}" number="1">
 				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:selectManyCheckbox immediate="true" layout="pageDirection" value="#{selectManyModelBean.favoriteIds}"
@@ -25,7 +24,8 @@
 			</showcase:example>
 			<showcase:outputModel>
 				<ui:repeat id="modelValue" value="#{selectManyModelBean.favoriteIds}" var="favoriteId">
-					<alloy:outputText value="#{favoriteId}" /><br />
+					<alloy:outputText value="#{favoriteId}" />
+					<br />
 				</ui:repeat>
 			</showcase:outputModel>
 		</h:form>
@@ -34,8 +34,7 @@
 	<ui:define name="col2">
 		<!-- Example 2: ValueChangeListener execution when immediate is false (the default) -->
 		<h:form>
-			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-false']}"
-				longDescription="true" number="2">
+			<showcase:example description="#{i18n['valuechangelistener-execution-when-immediate-is-false']}" number="2">
 				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['favorite-liferay-benefit']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:selectManyCheckbox layout="pageDirection" value="#{selectManyModelBean.favoriteIds}"
@@ -53,7 +52,8 @@
 			</showcase:example>
 			<showcase:outputModel>
 				<ui:repeat id="modelValue" value="#{selectManyModelBean.favoriteIds}" var="favoriteId">
-					<alloy:outputText value="#{favoriteId}" /><br />
+					<alloy:outputText value="#{favoriteId}" />
+					<br />
 				</ui:repeat>
 			</showcase:outputModel>
 		</h:form>
