--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/general/inputDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/general/inputDate.xhtml
@@ -7,8 +7,8 @@
 		<!-- Example 1: Specifying focus (the default) for the showOn attribute pops up the calendar when the -->
 		<!-- textbox receives focus. -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-inputdate-general-example-1']}" longDescription="true" number="1"
-				renderedCheckbox="true" requiredCheckbox="true">
+			<showcase:example description="#{i18n['alloy-inputdate-general-example-1']}" number="1" renderedCheckbox="true"
+				requiredCheckbox="true">
 				<alloy:field label="#{i18n['birthday']}">
 					<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" rendered="#{showcaseModelBean.selectedComponent.rendered}"
 						required="#{showcaseModelBean.selectedComponent.required}" value="#{inputDateModelBean.birthday}" />
@@ -30,8 +30,7 @@
 	<ui:define name="col2">
 		<!-- Example 2: Specifying button for the showOn attribute pops up the calendar when the button is clicked. -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-inputdate-general-example-2']}" longDescription="true" number="2"
-				renderedCheckbox="true">
+			<showcase:example description="#{i18n['alloy-inputdate-general-example-2']}" number="2" renderedCheckbox="true">
 				<alloy:field label="#{i18n['birthday']}">
 					<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" showOn="button"
 						rendered="#{showcaseModelBean.selectedComponent.rendered}" value="#{inputDateModelBean.birthday}" />
@@ -54,8 +53,7 @@
 		<!-- Example#3: Specifying both for the showOn attribute pops up the calendar when the textbox receives -->
 		<!-- focus and when the button is clicked. -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-inputdate-general-example-3']}" longDescription="true" number="3"
-				renderedCheckbox="true">
+			<showcase:example description="#{i18n['alloy-inputdate-general-example-3']}" number="3" renderedCheckbox="true">
 				<alloy:field label="#{i18n['birthday']}">
 					<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" showOn="both"
 						rendered="#{showcaseModelBean.selectedComponent.rendered}" value="#{inputDateModelBean.birthday}" />
