--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputtooltip/general/outputTooltip.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputtooltip/general/outputTooltip.xhtml
@@ -5,8 +5,7 @@
 	<ui:define name="col1">
 		<!-- Example 1: Specifying tooltip text via the value attribute -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-outputtooltip-general-example-1']}" longDescription="true" number="1"
-				renderedCheckbox="true">
+			<showcase:example description="#{i18n['alloy-outputtooltip-general-example-1']}" number="1" renderedCheckbox="true">
 				<alloy:button id="myButton" value="#{i18n['position-mouse-cursor-here']}" />
 				<alloy:outputTooltip for="myButton" rendered="#{showcaseModelBean.selectedComponent.rendered}"
 					value="#{i18n['text-from-value-attribute']}" />
@@ -16,18 +15,19 @@
 
 	<ui:define name="col2">
 		<!-- Example 2: Specifying tooltip text via the associated component's title attribute -->
-		<showcase:example description="#{i18n['alloy-outputtooltip-general-example-2']}" longDescription="true" number="2">
-			<alloy:inputText id="myText" title="#{i18n['text-from-title-attribute']}" value="#{i18n['position-mouse-cursor-here']}" />
+		<showcase:example description="#{i18n['alloy-outputtooltip-general-example-2']}" number="2">
+			<alloy:inputText id="myText" title="#{i18n['text-from-title-attribute']}"
+				value="#{i18n['position-mouse-cursor-here']}" />
 			<alloy:outputTooltip for="myText" />
 		</showcase:example>
 	</ui:define>
 
 	<ui:define name="col3">
 		<!-- Example 3: Specifying children, headerText, opacity="0.5", position="bottom", and styleClass="tooltip-help" -->
-		<showcase:example description="#{i18n['alloy-outputtooltip-general-example-3']}" longDescription="true" number="3">
+		<showcase:example description="#{i18n['alloy-outputtooltip-general-example-3']}" number="3">
 			<alloy:outputText id="myText" value="#{i18n['position-mouse-cursor-here']}" />
-			<alloy:outputTooltip for="myText" headerText="#{i18n['header-text']}" opacity="0.5" position="bottom" 
-				styleClass="tooltip-help" zIndex="0" >
+			<alloy:outputTooltip for="myText" headerText="#{i18n['header-text']}" opacity="0.5" position="bottom"
+				styleClass="tooltip-help" zIndex="0">
 				<alloy:image value="/resources/images/liferay-faces-logo-small.png" />
 			</alloy:outputTooltip>
 		</showcase:example>
