--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/panelgroup/general/panelGroup.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/panelgroup/general/panelGroup.xhtml
@@ -16,8 +16,7 @@
 	<ui:define name="col2">
 		<!-- Example#2: Specifying block for the layout attribute causes the component to render a div. -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-panelgroup-general-example-2']}" longDescription="true" number="2"
-				renderedCheckbox="true">
+			<showcase:example description="#{i18n['alloy-panelgroup-general-example-2']}" number="2" renderedCheckbox="true">
 				<alloy:panelGroup layout="block" rendered="#{showcaseModelBean.selectedComponent.rendered}"
 					styleClass="showcase-panel">
 					#{i18n['this-text-is-inside-a-div-html-tag']}
