--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/css/showcase.css
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/css/showcase.css
@@ -72,22 +72,25 @@
 }
 
 .showcase-example,.showcase-attribute-value,.showcase-parameter-value,.showcase-model-value {
-	padding: 39px 19px 14px;
 	*padding-top: 19px;
 }
 
 .showcase-example label.example-label,.showcase-attribute-value label.attribute-label,.showcase-parameter-value label.parameter-label,.showcase-model-value label.model-label,.showcase-container label.container-label {
 	background-color: #f5f5f5;
-	border: 1px solid #ddd;
+	border-bottom: 1px solid #ddd;
+	border-right: 1px solid #ddd;
 	-webkit-border-radius: 4px 0 4px 0;
 	-moz-border-radius: 4px 0 4px 0;
 	border-radius: 4px 0 4px 0;
 	color: #9da0a4;
 	font-size: 12px;
-	left: -1px;
 	padding: 3px 7px;
-	position: absolute;
-	top: -1px;
+	float: left;
+}
+
+.example-content {
+	clear: both;
+	padding: 7px 19px 14px;
 }
 
 .showcase-example label.example-label span.example-number,.showcase-attribute-value label.attribute-label,.showcase-parameter-value label.parameter-label,.showcase-model-value label.model-label,.showcase-container label.container-label {
