FACES-1714 Develop Liferay Faces Showcase (xhtml source formatting)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/selected-tab/accordion.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/selected-tab/accordion.xhtml
@@ -5,7 +5,8 @@
 	<showcase:example>
 		<h:form>
 			<alloy:messages globalOnly="true" layout="table" />
-			<alloy:accordion binding="#{accordionBackingBean.accordion}" selectedIndex="#{accordionBackingBean.defaultSelectedIndex}">
+			<alloy:accordion binding="#{accordionBackingBean.accordion}"
+				selectedIndex="#{accordionBackingBean.defaultSelectedIndex}">
 				<alloy:tab label="Compatible">
 					<alloy:image library="images" name="icon-compatible.png" />
 					<span>Liferay lets you reuse the enterprise software and skills you already have in-house.</span>
