--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/fieldset/general/fieldset.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/fieldset/general/fieldset.xhtml
@@ -6,8 +6,7 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example renderedCheckbox="true">
-				<alloy:fieldset legend="#{i18n['fieldset-legend']}"
-					rendered="#{showcaseModelBean.selectedComponent.rendered}">
+				<alloy:fieldset legend="#{i18n['fieldset-legend']}" rendered="#{showcaseModelBean.selectedComponent.rendered}">
 					<alloy:field label="#{i18n['text-box-1']}">
 						<alloy:inputText />
 					</alloy:field>
