--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/min-max-date/inputDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/min-max-date/inputDate.xhtml
@@ -7,8 +7,7 @@
 		<h:form>
 			<showcase:example>
 				<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" maximumDate="#{inputDateModelBean.maxDate}"
-					minimumDate="#{inputDateModelBean.minDate}" showOn="button"
-					value="#{inputDateModelBean.birthday}" />
+					minimumDate="#{inputDateModelBean.minDate}" showOn="button" value="#{inputDateModelBean.birthday}" />
 				<alloy:message for="birthday" />
 				<br />
 				<alloy:outputText value="#{i18n['valid-date-range']}: " />
