--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputstylesheet/general/outputStylesheet.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputstylesheet/general/outputStylesheet.xhtml
@@ -17,8 +17,7 @@
 
 	<ui:define name="col2">
 		<!-- Example 2: Specifying a CSS class from a JSF resource -->
-		<showcase:example description="#{i18n['alloy-outputstylesheet-general-example-2']}" longDescription="true"
-			number="2">
+		<showcase:example description="#{i18n['alloy-outputstylesheet-general-example-2']}" longDescription="true" number="2">
 			<alloy:outputStylesheet library="css" name="example-resource.css" />
 			<alloy:button styleClass="example-resource" value="#{i18n['button']}" />
 		</showcase:example>
