--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/default-value/selectManyMenu.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanymenu/default-value/selectManyMenu.xhtml
@@ -23,7 +23,8 @@
 			</showcase:example>
 			<showcase:outputModel>
 				<ui:repeat id="modelValue" value="#{selectManyModelBean.benefitIds}" var="benefitId">
-					<alloy:outputText value="#{benefitId}" /><br />
+					<alloy:outputText value="#{benefitId}" />
+					<br />
 				</ui:repeat>
 			</showcase:outputModel>
 		</h:form>
