--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectonelistbox/general/selectOneListbox.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectonelistbox/general/selectOneListbox.xhtml
@@ -8,8 +8,7 @@
 			<showcase:example renderedCheckbox="true" requiredCheckbox="true">
 				<alloy:field label="#{i18n['favorite-liferay-benefit']}">
 					<alloy:selectOneListbox id="selectOneListbox" rendered="#{showcaseModelBean.selectedComponent.rendered}"
-						required="#{showcaseModelBean.selectedComponent.required}" size="4" 
-						value="#{selectOneModelBean.favoriteId}">
+						required="#{showcaseModelBean.selectedComponent.required}" size="4" value="#{selectOneModelBean.favoriteId}">
 						<f:selectItem itemLabel="-- Select --" noSelectionOption="true" />
 						<f:selectItem itemLabel="Compatible" itemValue="1" />
 						<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
