--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/tabview/selected-tab/tabView.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/tabview/selected-tab/tabView.xhtml
@@ -4,7 +4,8 @@
 
 	<showcase:example>
 		<h:form>
-			<alloy:messages globalOnly="true" layout="table" /><br />
+			<alloy:messages globalOnly="true" layout="table" />
+			<br />
 			<alloy:tabView binding="#{tabViewBackingBean.tabView}" selectedIndex="#{tabViewBackingBean.defaultSelectedIndex}">
 				<alloy:tab label="Compatible">
 					<alloy:image library="images" name="icon-compatible.png" />
