--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/link/general/link.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/link/general/link.xhtml
@@ -6,8 +6,7 @@
 	<ui:define name="col1">
 		<!-- Example 1: Specifying hyperlink text via the value attribute -->
 		<h:form>
-			<showcase:example description="#{i18n['alloy-link-general-example-1']}" number="1" 
-				renderedCheckbox="true">
+			<showcase:example description="#{i18n['alloy-link-general-example-1']}" number="1" renderedCheckbox="true">
 				<alloy:link includeViewParams="true" rendered="#{showcaseModelBean.selectedComponent.rendered}"
 					value="#{i18n['text-for-a-link']}" />
 			</showcase:example>
