--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanycheckbox/conversion/selectManyCheckbox.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanycheckbox/conversion/selectManyCheckbox.xhtml
@@ -6,7 +6,8 @@
 	<ui:define name="col1">
 		<h:form>
 			<showcase:example description="#{i18n['conversion-to-a-date-using-f-convertdatetime']}">
-				<alloy:outputLabel styleClass="alloy-output-label" value="#{i18n['which-of-the-following-dates-are-in-the-18th-century']}" />
+				<alloy:outputLabel styleClass="alloy-output-label"
+					value="#{i18n['which-of-the-following-dates-are-in-the-18th-century']}" />
 				<alloy:messages globalOnly="true" styleClass="feedback" />
 				<alloy:selectManyCheckbox value="#{selectManyModelBean.dates}">
 					<f:convertDateTime pattern="MM/dd/yyyy G" />
@@ -24,7 +25,8 @@
 				<ui:repeat id="modelValue" value="#{selectManyModelBean.dates}" var="date">
 					<alloy:outputText value="#{date}">
 						<f:convertDateTime pattern="MMM d, yyyy G" />
-					</alloy:outputText><br />
+					</alloy:outputText>
+					<br />
 				</ui:repeat>
 			</showcase:outputModel>
 		</h:form>
