--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanycheckbox/instant-ajax/selectManyCheckbox.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectmanycheckbox/instant-ajax/selectManyCheckbox.xhtml
@@ -18,7 +18,8 @@
 			</showcase:example>
 			<showcase:outputModel>
 				<ui:repeat id="modelValue" value="#{selectManyModelBean.favoriteIds}" var="favoriteId">
-					<alloy:outputText value="#{favoriteId}" /><br />
+					<alloy:outputText value="#{favoriteId}" />
+					<br />
 				</ui:repeat>
 			</showcase:outputModel>
 		</h:form>
