--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/general/selectStarRating.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/selectstarrating/general/selectStarRating.xhtml
@@ -7,8 +7,7 @@
 		<h:form>
 			<showcase:example renderedCheckbox="true" requiredCheckbox="true">
 				<alloy:field label="#{i18n['rating']}">
-					<alloy:selectStarRating id="starRating"
-						rendered="#{showcaseModelBean.selectedComponent.rendered}"
+					<alloy:selectStarRating id="starRating" rendered="#{showcaseModelBean.selectedComponent.rendered}"
 						required="#{showcaseModelBean.selectedComponent.required}" value="#{selectStarRatingModelBean.favoriteId}">
 						<f:selectItem itemLabel="Compatible" itemValue="1" />
 						<f:selectItem itemLabel="Enterprise Ready" itemValue="2" />
