--- a/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
+++ b/alloy/src/main/resources/META-INF/resources/liferay-faces-alloy/alloy.css
@@ -11,6 +11,7 @@
 
 /* alloy-dialog */
 div.alloy-dialog {
+	padding: 6px;
 	text-align: center;
 }
 
@@ -50,8 +51,8 @@ ul.alloy-messages {
 
 /* alloy-popover */
 div.alloy-popover {
-	text-align: center;
 	padding: 6px;
+	text-align: center;
 }
 
 /* alloy-select-boolean-checkbox */
@@ -244,3 +245,16 @@ div.yui3-menu>div.yui3-menu-content>ul div.yui3-menu>div.yui3-menu-content>ul {
 	float: left;
 	opacity: .65;
 }
+
+/* begin dataList */
+
+div.alloy-data-list-content {
+	margin: 6px;
+}
+
+div.alloy-data-list {
+	border: 1px solid rgba(0,0,0,.3);
+	border-radius: 6px;
+}
+
+/* end dataList */
