--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/instant-ajax/inputDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/instant-ajax/inputDate.xhtml
@@ -5,10 +5,32 @@
 
 	<ui:define name="col1">
 		<h:form>
-			<showcase:example>
-				<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" value="#{inputDateModelBean.birthday}">
-					<f:ajax render="@form" />
-				</alloy:inputDate>
+			<showcase:example description="#{i18n['alloy-inputdate-instant-ajax-example-1']}" number="1">
+				<alloy:field label="#{i18n['birthday']}">
+					<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" value="#{inputDateModelBean.birthday}">
+						<f:ajax render="@form" />
+					</alloy:inputDate>
+					<alloy:message for="birthday" />
+				</alloy:field>
+			</showcase:example>
+			<showcase:outputModel>
+				<alloy:outputText value="#{inputDateModelBean.birthday}">
+					<f:convertDateTime pattern="MM/dd/yyyy" />
+				</alloy:outputText>
+			</showcase:outputModel>
+		</h:form>
+	</ui:define>
+
+	<ui:define name="col2">
+		<h:form>
+			<showcase:example description="#{i18n['alloy-inputdate-instant-ajax-example-2']}" number="2">
+				<alloy:field label="#{i18n['birthday']}">
+					<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" value="#{inputDateModelBean.birthday}">
+						<f:ajax event="change" render="@form" />
+						<f:ajax event="dateSelect" render="@form" />
+					</alloy:inputDate>
+					<alloy:message for="birthday" />
+				</alloy:field>
 			</showcase:example>
 			<showcase:outputModel>
 				<alloy:outputText value="#{inputDateModelBean.birthday}">
