--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/tabview/server-events/tabView.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/tabview/server-events/tabView.xhtml
@@ -2,13 +2,13 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
-	<showcase:example id="tabViewExample">
-		<h:form id="tabViewForm">
+	<showcase:example id="example">
+		<h:form id="exampleForm">
 			<alloy:messages id="feedback" globalOnly="true" layout="table" />
 			<br />
 			<alloy:tabView selectedIndex="#{tabViewBackingBean.defaultSelectedIndex}"
 				tabEventListener="#{tabViewBackingBean.tabEventListener}">
-				<f:ajax event="tabSelected" render=":tabViewExample:tabViewForm:feedback" />
+				<f:ajax event="tabSelected" render=":example:exampleForm:feedback" />
 				<alloy:tab label="Compatible">
 					<alloy:image library="images" name="icon-compatible.png" />
 					<span>Liferay lets you reuse the enterprise software and skills you already have in-house.</span>
