FACES-1714 Develop Liferay Faces Showcase (visually improve spacing for dialog content)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datalist/selection/dataList.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/datalist/selection/dataList.xhtml
@@ -15,7 +15,7 @@
 					</alloy:dataItem>
 				</alloy:dataList>
 				<alloy:dialog headerText="#{i18n['more-info']}" clientKey="dialogKey" dismissible="true">
-					<alloy:panelGroup id="dialogContents" class="dialog-contents" layout="block">
+					<alloy:panelGroup id="dialogContents" class="dialog-content" layout="block">
 						<alloy:outputText
 							value="#{dataListModelBean.selectedLiferayBenefit.label}: #{dataListModelBean.selectedLiferayBenefit.description}" />
 					</alloy:panelGroup>
