--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/dialog/general/dialog.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/dialog/general/dialog.xhtml
@@ -10,7 +10,7 @@
 				<alloy:button onclick="Liferay.component('dialogKey1').toggle();" title="#{i18n['button-title']}"
 					value="#{i18n['click-here-to-toggle-the-dialog']}" />
 				<alloy:dialog clientKey="dialogKey1" headerText="#{i18n['header-text']}">
-					<alloy:field label="#{i18n['text-field']}">
+					<alloy:field label="#{i18n['text-field']}" styleClass="dialog-content">
 						<alloy:inputText value="#{dialogModelBean.text}" />
 					</alloy:field>
 					<alloy:commandButton action="#{dialogBackingBean.submit}" value="#{i18n['submit']}">
@@ -32,7 +32,7 @@
 				<alloy:button onclick="Liferay.component('dialogKey2').show();" title="#{i18n['button-title']}"
 					value="#{i18n['click-here-to-show-the-dialog-and-cilck-outside-the-dialog-to-hide']}" />
 				<alloy:dialog clientKey="dialogKey2" dismissible="true" headerText="#{i18n['header-text']}">
-					<alloy:field label="#{i18n['text-field']}">
+					<alloy:field label="#{i18n['text-field']}" styleClass="dialog-content">
 						<alloy:inputText value="#{dialogModelBean.text}" />
 					</alloy:field>
 					<alloy:commandButton action="#{dialogBackingBean.submit}" value="#{i18n['submit']}">
@@ -54,7 +54,7 @@
 				<alloy:button onclick="Liferay.component('dialogKey3').show();" title="#{i18n['button-title']}"
 					value="#{i18n['click-here-to-show-the-modal-dialog']}" />
 				<alloy:dialog clientKey="dialogKey3" headerText="#{i18n['header-text']}" modal="true">
-					<alloy:field label="#{i18n['text-field']}">
+					<alloy:field label="#{i18n['text-field']}" styleClass="dialog-content">
 						<alloy:inputText value="#{dialogModelBean.text}" />
 					</alloy:field>
 					<alloy:commandButton action="#{dialogBackingBean.submit}" value="#{i18n['submit']}">
