--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/instant-ajax/inputDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/instant-ajax/inputDate.xhtml
@@ -4,6 +4,7 @@
 	template="/templates/component-3col.xhtml">
 
 	<ui:define name="col1">
+		<!-- Example 1: Instant-Ajax when a date is selected -->
 		<h:form>
 			<showcase:example description="#{i18n['alloy-inputdate-instant-ajax-example-1']}" number="1">
 				<alloy:field label="#{i18n['birthday']}">
@@ -22,6 +23,7 @@
 	</ui:define>
 
 	<ui:define name="col2">
+		<!-- Example 2: Instant-Ajax when a date is selected or when the user enters a value -->
 		<h:form>
 			<showcase:example description="#{i18n['alloy-inputdate-instant-ajax-example-2']}" number="2">
 				<alloy:field label="#{i18n['birthday']}">
