FACES-1953 Develop alloy:accordion component (refactored TabEvent to TabCollapseEvent and TabExpandEvent) FACES-1901 Develop aui:tab and aui:tabView components (refactored TabEvent to TabSelectEvent) FACES-1714 Develop Liferay Faces Showcase (modified use-cases for new 'tabCollapse', 'tabExpand', and 'tabSelect' event names)

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/server-events/accordion.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/accordion/server-events/accordion.xhtml
@@ -6,9 +6,10 @@
 		<h:form id="exampleForm">
 			<alloy:messages id="feedback" globalOnly="true" layout="table" />
 			<alloy:accordion selectedIndex="#{accordionBackingBean.defaultSelectedIndex}"
-				tabEventListener="#{accordionBackingBean.tabEventListener}">
-				<f:ajax event="tabCollapsed" render=":example:exampleForm:feedback" />
-				<f:ajax event="tabExpanded" render=":example:exampleForm:feedback" />
+				tabExpandListener="#{accordionBackingBean.tabExpandListener}"
+				tabCollapseListener="#{accordionBackingBean.tabCollapseListener}">
+				<f:ajax event="tabCollapse" render=":example:exampleForm:feedback" />
+				<f:ajax event="tabExpand" render=":example:exampleForm:feedback" />
 				<alloy:tab label="Compatible">
 					<alloy:image library="images" name="icon-compatible.png" />
 					<span>Liferay lets you reuse the enterprise software and skills you already have in-house.</span>
